# entanglementlib

./: .gitignore  .gitmodules  .temp.env  NATIVE_BENCHMARK.md  README.md  README_EN.md  SECURITY.md  SECURITY_EN.md  TECHNICAL.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: code_quality.yml  qodana_code_quality.yml  security-and-static-analysis.yml
core/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
internal-shared-server/: build.gradle.kts
native-benchmark/: Cargo.toml
native-benchmark/src/: lib.rs
public/: CHACHATestInput.json  configuration.json  security-providers.txt
public/lang/: messages_en_US.yml  messages_ko_KR.yml
security/: build.gradle.kts
security/src/benchmark/resources/: logback.xml
security/src/main/resources/: logback.xml
src/benchmark/java/space/qu4nt/entanglementlib/benchmark/: NativeAVXCall_JMHBenchmark.java  NativeCall_JMHBenchmark.java
src/main/java/space/qu4nt/entanglementlib/: CallerResponsibility.java  EntanglementLibBootstrap.java  EntanglementLibEnvs.java  ExternalPattern.java  HeuristicArenaFactory.java  InternalFactory.java  Unsafe.java  WrapEnv.java
src/main/java/space/qu4nt/entanglementlib/entlibnative/: NativeLinkerManager.java  ProgressResult.java  SensitiveDataContainer.java
src/main/java/space/qu4nt/entanglementlib/exception/: EntLibException.java  EntLibUncheckedException.java  EntanglementLibException.java  (+3 more)
src/main/resources/: logback.xml
src/test/java/space/qu4nt/entanglementlib/: EnvironmentTest.java  NativeTest.java
src/test/resources/: logback.xml
(+352 files in other folders)
